[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-async-llm-client"
version = "1.0.0"
description = "Provider-agnostic async client for OpenAI and Anthropic with streaming and typed errors"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.117.0,<1",
    "openai>=2.45.0,<3",
    "pydantic>=2.13.4,<3",
    "python-dotenv>=1.1.1,<2",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.406,<2",
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=1.2.0,<2",
    "ruff>=0.12.12,<1",
]

[tool.setuptools]
py-modules = ["main", "manager", "schemas"]

[tool.setuptools.packages.find]
include = ["clients*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
include = ["clients", "tests", "main.py", "manager.py", "schemas.py"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
